recursion.lessons.recursion.koch.Koch.scala.error
Koch:25: error: missing arguments for method snowSide in class Koch;
follow this method with `_' if you want to treat it as a partially applied function
  return(snowSide)
         ^